--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    “heroku-postbuild”: “gatsby build”
+    "heroku-postbuild": "gatsby build"
   },
   "repository": {
     "type": "git",
